codegen/ui_tests/rhai_fn_non_clonable_return.stderr
error[E0277]: the trait bound `NonClonable: std::clone::Clone` is not satisfied
   --> $DIR/rhai_fn_non_clonable_return.rs:11:8
    |
11  | pub fn test_fn(input: f32) -> NonClonable {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::clone::Clone` is not implemented for `NonClonable`
    |
   ::: /home/cryptkeeper/Desktop/Software/ytdl-replacement/rhai/src/any.rs:537:30
    |
537 |     pub fn from<T: Variant + Clone>(value: T) -> Self {
    |                              ----- required by this bound in `rhai::Dynamic::from`
